trunk/Archive2/e2/c6365290240c74/output
main.cpp:85:33: error: reference to non-static member function must be called; did you mean to call it with no arguments?
    out<<"\nEmployee Name:"<<pw.getEmployeeName<<"\tHiredate:"<<pw.getEmployeeHireDate;
                             ~~~^~~~~~~~~~~~~~~
                                               ()
main.cpp:85:68: error: reference to non-static member function must be called; did you mean to call it with no arguments?
    out<<"\nEmployee Name:"<<pw.getEmployeeName<<"\tHiredate:"<<pw.getEmployeeHireDate;
                                                                ~~~^~~~~~~~~~~~~~~~~~~
                                                                                      ()
main.cpp:86:35: error: reference to non-static member function must be called; did you mean to call it with no arguments?
    out<<"\nEmployee Number:"<<pw.getEmployeeNo<<"\tShift:"<<pw.getShift<<"\tPay Rate:"<<pw.getPayRate;
                               ~~~^~~~~~~~~~~~~
                                               ()
main.cpp:86:65: error: reference to non-static member function must be called; did you mean to call it with no arguments?
    out<<"\nEmployee Number:"<<pw.getEmployeeNo<<"\tShift:"<<pw.getShift<<"\tPay Rate:"<<pw.getPayRate;
                                                             ~~~^~~~~~~~
                                                                        ()
main.cpp:86:93: error: reference to non-static member function must be called; did you mean to call it with no arguments?
    out<<"\nEmployee Number:"<<pw.getEmployeeNo<<"\tShift:"<<pw.getShift<<"\tPay Rate:"<<pw.getPayRate;
                                                                                         ~~~^~~~~~~~~~
                                                                                                      ()
5 errors generated.
